website about traveling

--- a/css/home.css
+++ b/css/home.css
@@ -139,3 +139,8 @@ footer{
     font-size: large;
     margin-top: 5px;
 }
+.php{
+    font-size: 20px;
+    color: #046271;
+    background-color: bisque;
+}
